# Grove

./: .gitignore  .goreleaser-linux.yaml  .goreleaser-macos.yaml  .goreleaser.macos.yaml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  release-plz.toml
.circleci/: config.yml
.flock/: project.toml
.github/workflows/: release-plz.yml  release.yml  rust.yml
docs/: PM_SETUP_GUIDE.md  customizable-prompts-plan.md  dev-server-implementation.md  keybind-cleanup-plan.md  notion-integration-plan.md  settings-system-plan.md  spaces-in-names.md
src/: lib.rs  main.rs  version.rs
src/agent/: detector.rs  manager.rs  mod.rs  model.rs
src/airtable/: client.rs  mod.rs  types.rs
src/app/: action.rs  config.rs  mod.rs  state.rs  task_list.rs
src/asana/: client.rs  mod.rs  types.rs
src/automation/: executor.rs  mod.rs
src/cache/: mod.rs
src/ci/: mod.rs  types.rs
src/claude_code/: mod.rs  session.rs
src/clickup/: client.rs  mod.rs  types.rs
src/codeberg/: client.rs  forgejo_actions.rs  types.rs  woodpecker.rs
src/codex/: mod.rs  session.rs
src/core/: mod.rs
src/core/common/: mod.rs  string_utils.rs
src/core/git_providers/: helpers.rs  mod.rs
src/core/git_providers/codeberg/: client.rs  forgejo_actions.rs  mod.rs
src/core/git_providers/github/: client.rs  types.rs
src/core/git_providers/gitlab/: client.rs  mod.rs
src/core/projects/: helpers.rs  mod.rs  statuses.rs
src/core/projects/airtable/: client.rs  mod.rs  types.rs
src/core/projects/asana/: client.rs  mod.rs  types.rs
src/core/projects/clickup/: client.rs  mod.rs  types.rs
src/core/projects/linear/: client.rs  types.rs
src/core/projects/notion/: client.rs  types.rs
src/devserver/: manager.rs  mod.rs  process.rs
src/gemini/: session.rs
src/git/: mod.rs  remote.rs  status.rs  sync.rs  worktree.rs
src/github/: client.rs  mod.rs
src/gitlab/: client.rs  mod.rs  types.rs
src/linear/: client.rs  mod.rs  types.rs
src/notion/: client.rs  mod.rs  types.rs
src/opencode/: mod.rs  session.rs
src/storage/: mod.rs  session.rs
src/tmux/: mod.rs  session.rs
src/ui/: app.rs  appearance.rs  helpers.rs  mod.rs
src/ui/components/: agent_list.rs  column_selector.rs  devserver_view.rs  devserver_warning.rs  diff_view.rs  file_browser.rs  git_setup_modal.rs  global_setup.rs  help_overlay.rs  loading_overlay.rs  mod.rs  modal.rs  output_view.rs  pm_setup_modal.rs  pm_status_debug_overlay.rs  project_setup.rs  settings_modal.rs  setup_dialog.rs  status_bar.rs  status_debug_overlay.rs  status_dropdown.rs  subtask_status_dropdown.rs  system_metrics.rs  task_list_modal.rs  task_reassignment_warning.rs  toast.rs  tutorial_wizard.rs
src/util/: mod.rs
src/util/git/: mod.rs
src/util/pm/: mod.rs
src/zellij/: mod.rs  session.rs
www/: index.html  package-lock.json  package.json
www/src/: index.css  main.tsx  router.tsx
www/src/components/docs/: DocsLayout.tsx
www/src/components/ui/: dropdown-menu.tsx  field.tsx
www/src/routes/: DocsPage.tsx  HomePage.tsx
