[package]
name = "flock"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing multiple Claude Code agents with git worktree isolation"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
color-eyre = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
sysinfo = "0.31"
ansi-to-tui = "7"
arboard = "3.6.1"

[dev-dependencies]
tempfile = "3"
