[package]
name = "grove-ai"
version = "0.1.3"
edition = "2021"
description = "A TUI for managing multiple Claude Code agents with git worktree isolation"
license = "MIT"
repository = "https://github.com/ziim/grove"
homepage = "https://github.com/ziim/grove"
readme = "README.md"
keywords = ["tui", "claude", "agent", "git", "worktree"]
categories = ["command-line-interface", "development-tools"]

[lib]
name = "grove"
path = "src/lib.rs"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
sysinfo = "0.31"
ansi-to-tui = "7"
arboard = "3.6.1"
open = "5"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
